--- a/src/main/webapp/project/tour_box.css
+++ b/src/main/webapp/project/tour_box.css
@@ -55,7 +55,7 @@
         .tour_list_all {
             width: 158px;
             height: 129px;
-            background-color: orange;
+            background-color: #2168f6;
             float: left;
             text-align: center;
             line-height: 129px;
@@ -106,7 +106,7 @@
         }
 
         .theme_list li:hover {
-            background-color: orange;
+            background-color: #2168f6;
 
         }
 
@@ -158,7 +158,7 @@
 
         .layer_img li a:hover {
             text-decoration: none;
-            color: tomato;
+            color: #2168f6;
 
         }
 
